--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "miragejs": "^0.1.45",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
